fillit after ex

--- a/fillit/Makefile
+++ b/fillit/Makefile
@@ -6,62 +6,50 @@
 #    By: bhoth <bhoth@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/09/05 20:43:46 by bhoth             #+#    #+#              #
-#    Updated: 2019/10/15 21:04:35 by bhoth            ###   ########.fr        #
+#    Updated: 2020/02/02 15:32:21 by bhoth            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	:= fillit 
-
-# directories
-SRC_DIR	:= ./
-INC_DIR	:= ./
-OBJ_DIR	:= ./obj
-LIB_DIR	:= ./
-
 # src / obj files
-SRC		:= main.c \
-		   get_next_line.c \
-		   solution.c \
-		   solution_functions.c \
-		   elements.c \
-		   check_solution.c \
-		   check_element.c
+SRC		:= 	main.c \
+		   	get_next_line.c \
+		   	solution.c \
+		   	solution_functions.c \
+		   	elements.c \
+			check_solution.c \
+			check_element.c \
+			print.c\
+			find_solution.c
+
 OBJ		:= $(addprefix $(OBJ_DIR)/,$(SRC:.c=.o))
 
-# compiler and flags
-CC		:= gcc
-CFLAGS	:= -Wall -Wextra -Werror -pedantic -std=c99
-OFLAGS	:= -pipe -flto
-CFLAGS	+= $(OFLAGS)
+NAME = fillit
 
-# libraries
-L_FT	:= $(LIB_DIR)/libft
+INCLUDES = fillit.h
 
-include $(L_FT)/lib.mk
+OBJS = $(SRC:.c=.o)
 
-.PHONY: all clean fclean re
+all: $(NAME)
 
-all:
-	mkdir -p $(OBJ_DIR)
-	@$(MAKE) -C $(L_FT) --no-print-directory
-	@$(MAKE) $(NAME) --no-print-directory
+$(NAME): lib $(OBJS)
+		gcc -g -o $(NAME) $(OBJS) -L libft -lft
 
-$(OBJ_DIR)/%.o:$(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) $(LIB_INC) -I $(INC_DIR) -o $@ -c $<
+$(OBJS): %.o : %.c fillit.h
+		gcc -Wall -Wextra -Werror -g -I./ -c $<
 
-$(NAME): $(OBJ)
-	$(CC) $(OFLAGS) $(OBJ) $(LIB_LNK) -o $(NAME)
+lib:
+	@make -C libft
 
 clean:
-	rm -rf $(OBJ_DIR)
+	/bin/rm -f $(OBJS)
+	make -C libft clean
 
 fclean: clean
-	rm -rf $(NAME)
+	/bin/rm -f $(NAME)
+	make -C libft fclean
 
-re:
-	@$(MAKE) fclean --no-print-directory
-	@$(MAKE) all --no-print-directory
+re: fclean all
 
 relibs:
-	@$(MAKE) -C $(L_FT) re --no-print-directory
-	@$(MAKE) re --no-print-directory
+	$(MAKE) -C $(LIBFT) re
+	$(MAKE) re
