--- a/fillit/libft/Makefile
+++ b/fillit/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: bhoth <bhoth@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/09/05 20:43:46 by bhoth             #+#    #+#              #
-#    Updated: 2019/10/15 21:04:35 by bhoth            ###   ########.fr        #
+#    Updated: 2020/01/10 19:05:05 by sreyne           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
